--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -51,7 +51,7 @@
         <div class="w-full max-w-md text-center">
           <h2 class="text-2xl font-bold mb-2 pb-4">Reset Password</h2>
     
-          <form *ngIf="!resetOtpVerified" [formGroup]="resetForm" (ngSubmit)="verifyResetOtp()" class="space-y-4">
+          <form *ngIf="!otpVerified" [formGroup]="resetForm" (ngSubmit)="verifyResetOtp()" class="space-y-4">
               <div class="relative">
                   <input
                 type="email"
@@ -63,7 +63,7 @@
                 Valid email is required.
               </div>
               <div
-        (click)="sendOtp()"
+        (click)="sendOtpForReset()"
         class="absolute top-[25px] -translate-y-1/2 right-3 w-8 h-8 rounded-full flex items-center justify-center cursor-pointer transition"
         [ngClass]="{
           'bg-blue-600': resetForm.get('email')?.valid,
@@ -101,7 +101,7 @@
               </button>
               <!-- <a href="#" class="text-sm text-gray-500 hover:underline block mt-2">Forgot Password</a> -->
             </form>
-            <form *ngIf="resetOtpVerified" [formGroup]="newPasswordForm" (ngSubmit)="changePassword()" class="space-y-4">
+            <form *ngIf="otpVerified" [formGroup]="newPasswordForm" (ngSubmit)="changePassword()" class="space-y-4">
               <div class="relative">
                 <input
               type="password"
@@ -126,6 +126,9 @@
             <div class="text-red-500 text-sm" *ngIf="newPasswordForm.errors?.['passwordMismatch'] && newPasswordForm.touched">
               Passwords do not match
             </div>
+            <div class="text-red-500 text-sm" *ngIf="newPasswordForm.get('newPassword')?.hasError('pattern')">
+              Password must contain at least one uppercase letter, one number, and one special character.
+            </div>
             </div>
 
             <button [disabled]="newPasswordForm.invalid"
@@ -146,7 +149,7 @@
         <div class="w-full max-w-md text-center">
           <h2 class="text-2xl font-bold mb-2 pb-4">Register</h2>
     
-          <form *ngIf="!resetOtpVerified" [formGroup]="registerForm" (ngSubmit)="verifyRegisterOtp()" class="space-y-4">
+          <form *ngIf="!otpVerified" [formGroup]="registerForm" (ngSubmit)="verifyRegisterOtp()" class="space-y-4">
               <div class="relative">
                   <input
                 type="email"
@@ -158,7 +161,7 @@
                 Valid email is required.
               </div>
               <div
-        (click)="sendOtp()"
+        (click)="sendOtpForRegistration()"
         class="absolute top-[25px] -translate-y-1/2 right-3 w-8 h-8 rounded-full flex items-center justify-center cursor-pointer transition"
         [ngClass]="{
           'bg-blue-600': registerForm.get('email')?.valid,
@@ -196,7 +199,7 @@
               </button>
               <!-- <a href="#" class="text-sm text-gray-500 hover:underline block mt-2">Forgot Password</a> -->
             </form>
-            <form *ngIf="resetOtpVerified" [formGroup]="newPasswordForm" (ngSubmit)="changePassword()" class="space-y-4">
+            <form *ngIf="otpVerified" [formGroup]="newPasswordForm" (ngSubmit)="createCustomer()" class="space-y-4">
               <div class="relative">
                 <input
               type="password"
@@ -221,12 +224,15 @@
             <div class="text-red-500 text-sm" *ngIf="newPasswordForm.errors?.['passwordMismatch'] && newPasswordForm.touched">
               Passwords do not match
             </div>
+            <div class="text-red-500 text-sm" *ngIf="newPasswordForm.get('newPassword')?.hasError('pattern')">
+              Password must contain at least one uppercase letter, one number, and one special character.
+            </div>
             </div>
 
             <button [disabled]="newPasswordForm.invalid"
                 type="submit"
                 class="w-full py-3 bg-blue-600 hover:bg-blue-700 disabled:bg-blue-300 text-white font-semibold rounded-full transition">
-                Reset Password
+                Register
               </button>
 
           </form>
