--- a/src/app/buy/buy.component.html
+++ b/src/app/buy/buy.component.html
@@ -1,90 +1,132 @@
-<div class="flex flex-col lg:flex-row gap-6 p-4 max-w-[1400px] mx-auto pt-20">
-  <!-- Cart Items List -->
-  <div class="w-full lg:w-2/3 space-y-4">
-    <div class="flex items-center gap-4 border-b pb-4">
+<form [formGroup]="orderForm"  *ngIf="myProfile" class="flex flex-col lg:flex-row gap-6 p-4 max-w-[1400px] mx-auto pt-20">
+  <div class="w-full lg:w-7/12 space-y-4">
+    <h2 class="text-xl font-bold mb-4">DELIVERY DETAILS</h2>
+
+    <!-- Name Input -->
+    <div class="mb-4">
+      <label for="name" class="block text-sm font-medium text-gray-700 mb-1 ">Recipient Name</label>
+      <input formControlName="recipientName" autocomplete="off" type="text" id="name" name="name"
+        class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 placeholder-gray-500"
+        placeholder="Enter recipient name" />
+    </div>
+    <div class="mb-4">
+      <label for="phoneNumber" class="block text-sm font-medium text-gray-700 mb-1">Phone Number</label>
+      <input autocomplete="off" formControlName="recipientPhone" type="number" id="phoneNumber" name="phoneNumber"
+        class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 placeholder-gray-500"
+        placeholder="Enter Phone Number" />
+    </div>
+    <h2 class="text-md font-bold mb-3">SHIPPING ADDRESS</h2>
+    
+    <div class="text-sm text-gray-600 mb-4">
+      <div class="flex flex-wrap gap-x-3">
+        <div *ngFor="let address of myProfile.addresses; let i = index" class="mb-2 border border-gray-500 py-5 px-5 w-full max-w-md rounded-lg">
+        <label class="flex items-start gap-2 cursor-pointer">
+          <input type="radio" formControlName="shippingAddressId" [value]="address.id" class="mt-1" />
+          <div>
+            <div class="font-medium text-md">{{ address.fullAddress }}</div>
+          </div>
+        </label>
+      </div>
+        <div class="w-full max-w-md mb-3">
+        <div (click)="addAddressDialog=true" *ngIf="myProfile.addresses.length<2"
+          class="border-2 border-dashed border-gray-400 rounded-lg p-6 py-3 text-center cursor-pointer hover:border-blue-500 hover:text-blue-600 transition">
+          <span class="text-lg font-medium">+ Add Address</span>
+        </div>
+      </div>
+      </div>
+    
+       <div class="mt-4 flex items-center gap-2">
+    <input
+      type="checkbox"
+      formControlName="billingSameAsShipping"
+      id="billingSameAsShipping"
+    />
+    <label for="billingSameAsShipping" class="cursor-pointer select-none">
+      Billing address same as shipping address
+    </label>
+  </div>
+    </div>
+
+     <h2 *ngIf="!orderForm.get('billingSameAsShipping')?.value" class="text-md font-bold mb-3">Billing ADDRESS</h2>
+
+    <div *ngIf="!orderForm.get('billingSameAsShipping')?.value" class="text-sm text-gray-600 mb-4">
+      <div class="flex flex-wrap gap-x-3">
+        <div *ngFor="let address of myProfile.addresses; let i = index" class="mb-2 border border-gray-500 py-5 px-5 w-full max-w-md rounded-lg">
+        <label class="flex items-start gap-2 cursor-pointer">
+          <input type="radio" formControlName="billingAddressId" [value]="address.id" class="mt-1" />
+          <div>
+            <div class="font-medium text-md">{{ address.fullAddress }}</div>
+          </div>
+        </label>
+      </div>
+      <div class="w-full max-w-md mb-3">
+        <div (click)="addAddressDialog=true" *ngIf="myProfile.addresses.length<2"
+          class="border-2 border-dashed border-gray-400 rounded-lg p-6 py-3 text-center cursor-pointer hover:border-blue-500 hover:text-blue-600 transition">
+          <span class="text-lg font-medium">+ Add Address</span>
+        </div>
+      </div>
+      </div>
+    </div>
+  </div>
+  <div class="w-full lg:w-5/12 border p-4 rounded shadow">
+
+    <div class="w-full space-y-4">
+      <div class="flex items-center gap-4 border-b pb-4">
         <h3 class="text-lg font-semibold w-8/12">Product</h3>
 
-      <p class="w-2/12 text-center">
-       Quantity
-      </p>
-      <p class="w-2/12 font-semibold">Subtotal</p>
-    </div>
-    <div *ngFor="let item of cartItems" class="flex items-center gap-4 border-b pb-4">
-      <div class="w-8/12">
-        <img [src]="item.image" alt="Product image" class="w-24 h-24 object-cover rounded-xl" />
-      <div class="flex-1">
-        <h3 class="text-lg font-semibold">{{ item.productName +" "+ (item.size?item.size.toUpperCase():'') +" "+ (item.color?item.color.toUpperCase():'') }}</h3>
-        <p class="text-sm text-gray-500">₹{{ item.sp }}</p> 
+        <p class="w-2/12 text-center">
+          Quantity
+        </p>
+        <p class="w-2/12 font-semibold">Subtotal</p>
       </div>
-      </div>
-      <div class="flex items-center gap-2 w-2/12">
-        <button (click)="item.quantity>1?item.quantity=item.quantity-1:'';
+      <div *ngFor="let item of cartItems" class="flex items-center gap-4 border-b pb-4">
+        <div class="w-8/12">
+          <img [src]="item.image" alt="Product image" class="w-24 h-24 object-cover rounded-xl" />
+          <div class="flex-1">
+            <h3 class="text-lg font-semibold">{{ item.productName +" "+ (item.size?item.size.toUpperCase():'') +" "+
+              (item.color?item.color.toUpperCase():'') }}</h3>
+            <p class="text-sm text-gray-500">₹{{ item.sp }}</p>
+          </div>
+        </div>
+        <div class="flex items-center gap-2 w-2/12">
+          <button (click)="item.quantity>1?item.quantity=item.quantity-1:'';
 " class="w-[25px] h-[25px] border">-</button>
-        <span>{{ item.quantity }}</span>
-        <button (click)="(item.quantity<item.available)?item.quantity=item.quantity+1:''" class="w-[25px] h-[25px]1 border">+</button>
+          <span>{{ item.quantity }}</span>
+          <button (click)="(item.quantity<item.available)?item.quantity=item.quantity+1:''"
+            class="w-[25px] h-[25px]1 border">+</button>
+        </div>
+        <div class="w-2/12 flex items-center ">
+          <p class="w-20  font-semibold">₹{{ item.sp*item.quantity }}</p>
+          <button (click)="removeCartItem(item)">🗑️</button>
+        </div>
       </div>
-      <div class="w-2/12 flex items-center ">
-        <p class="w-20  font-semibold">₹{{ item.sp*item.quantity }}</p>
-      <button (click)="removeCartItem(item)">🗑️</button>
-      </div>
+
     </div>
 
-  </div>
 
-  <!-- Cart Summary -->
-  <div class="w-full lg:w-1/3 border p-4 rounded shadow">
-  <h2 class="text-xl font-bold mb-4">DELIVERY DETAILS</h2>
+    <div class="flex justify-between py-1">
+      <span>Subtotal</span>
+      <!-- <span>₹{{ getSubtotal().toFixed(2) }}</span> -->
+    </div>
+    <div class="flex justify-between py-1">
+      <span>Shipping</span>
+      <span>Free shipping</span>
+    </div>
 
-  <!-- Name Input -->
-  <div class="mb-4">
-    <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Recipient Name</label>
-    <input
-      type="text"
-      id="name"
-      name="name"
-      class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-      placeholder="Enter recipient name"
-    />
+    <div class="flex justify-between font-bold py-2 border-t">
+      <span>Total</span>
+      <!-- <span>₹{{ getSubtotal().toFixed(2) }}</span> -->
+    </div>
+    <button
+  class="mt-4 w-full text-white py-2 rounded disabled:cursor-not-allowed"
+  [disabled]="orderForm.invalid"
+  [ngClass]="orderForm.valid ? 'bg-blue-600' : 'bg-blue-300'">
+  Proceed to checkout
+</button>
   </div>
-  <div class="mb-4">
-    <label for="phoneNumber" class="block text-sm font-medium text-gray-700 mb-1">Phone Number</label>
-    <input
-      type="number"
-      id="phoneNumber"
-      name="phoneNumber"
-      class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-      placeholder="Enter Phone Number"
-    />
-  </div>
-  <div class="w-full max-w-md mx-auto mb-3">
-  <div (click)="addAddressDialog=true" *ngIf="!myProfile.shippingAddressId" class="border-2 border-dashed border-gray-400 rounded-lg p-6 text-center cursor-pointer hover:border-blue-500 hover:text-blue-600 transition">
-    <span class="text-lg font-medium">+ Add Address</span>
-  </div>
-</div>
-   <div class="text-sm text-gray-600 mb-4">
-    Shipping to <strong>{{myProfile.shippingAddress.fullAddress}}</strong>
-  </div>
+</form>
 
-  <div class="flex justify-between py-1">
-    <span>Subtotal</span>
-    <!-- <span>₹{{ getSubtotal().toFixed(2) }}</span> -->
-  </div>
-  <div class="flex justify-between py-1">
-    <span>Shipping</span>
-    <span>Free shipping</span>
-  </div>
- 
-  <div class="flex justify-between font-bold py-2 border-t">
-    <span>Total</span>
-    <!-- <span>₹{{ getSubtotal().toFixed(2) }}</span> -->
-  </div>
-  <button class="mt-4 w-full bg-blue-600 text-white py-2 rounded">
-    Proceed to checkout
-  </button>
-</div>
-
-</div>
-
-<div  *ngIf="addAddressDialog" class="absolute top-0 left-0 h-screen w-screen flex items-center justify-center" style="background-color: rgba(0, 0, 0, 0.445);">
-    <app-add-address (closeAddAddressEvent)="addAddressDialog = false; getMyProfile()"/>
+<div *ngIf="addAddressDialog" class="absolute top-0 left-0 h-screen w-screen flex items-center justify-center"
+  style="background-color: rgba(0, 0, 0, 0.445);">
+  <app-add-address (closeAddAddressEvent)="addAddressDialog = false; getMyProfile()" />
 </div>
