--- a/src/app/components/edit-address/edit-address.component.html
+++ b/src/app/components/edit-address/edit-address.component.html
@@ -3,7 +3,7 @@
   <div (click)="close()" class="pt-3 text-end pe-3 cursor-pointer">
     close
   </div>
-  <h2 class="text-2xl font-semibold text-center sticky top-0 bg-white pt-4 pb-3 min-w-[400px]">Add Address</h2>
+  <h2 class="text-2xl font-semibold text-center sticky top-0 bg-white pt-4 pb-3 min-w-[400px]">Edit Address</h2>
 
   <form [formGroup]="addressForm" (ngSubmit)="onSubmit()" class="p-6">
 
