--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,9 @@
 <div class="w-screen h-screen fixed top-0 left-0 bg-[#000000b0] flex justify-center items-center p-3">
-     <div *ngIf="signIn" class="max-w-[500px] w-full bg-white flex justify-center items-center px-6 py-12">
+     <div *ngIf="signIn" class="max-w-[500px] w-full bg-white flex justify-center items-center px-6 py-12 relative">
+      <div class="absolute top-0 right-0 p-3 cursor-pointer " (click)="closeLogin()">
+             <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M6.2253 4.81108C5.83477 4.42056 5.20161 4.42056 4.81108 4.81108C4.42056 5.20161 4.42056 5.83477 4.81108 6.2253L10.5858 12L4.81114 17.7747C4.42062 18.1652 4.42062 18.7984 4.81114 19.1889C5.20167 19.5794 5.83483 19.5794 6.22535 19.1889L12 13.4142L17.7747 19.1889C18.1652 19.5794 18.7984 19.5794 19.1889 19.1889C19.5794 18.7984 19.5794 18.1652 19.1889 17.7747L13.4142 12L19.189 6.2253C19.5795 5.83477 19.5795 5.20161 19.189 4.81108C18.7985 4.42056 18.1653 4.42056 17.7748 4.81108L12 10.5858L6.2253 4.81108Z" fill="currentColor"/></svg>
+
+      </div>
         <div class="w-full max-w-md text-center">
           <h2 class="text-2xl font-bold mb-2">Hello Again!</h2>
           <p class="text-gray-600 mb-6">Welcome Back</p>
