--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,7 @@
 <div class=" px-5 py-2 bg-amber-100 flex justify-between">
     <img src="mw-logo.png" alt="Logo" class="h-[50px] rounded-md" />
-    <div class="flex gap-x-5">
+    <div class="flex gap-x-5 items-center">
+      <p [routerLink]="['/']" class="cursor-pointer font-medium">Home</p>
         <div [routerLink]="['cart']" style="position: relative;" class="cursor-pointer">
   <svg version="1.1" viewBox="0 0 26 26" width="40" height="40" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <path d="M22.6835938,7.1357422c-0.0253906-0.3955078-0.3525391-0.703125-0.7490234-0.703125h-3.9697266V5.2597656  
@@ -20,7 +21,7 @@
     {{ cartItems.length }}
   </div>
 </div>
-     <button (click)="isLoggedIn?logout():login()" class="bg-black px-3 rounded-md text-white cursor-pointer">{{isLoggedIn?'Logout':'Login'}}</button>
+     <button (click)="isLoggedIn?logout():login()" class="bg-black px-3 py-2 rounded-md text-white cursor-pointer">{{isLoggedIn?'Logout':'Login'}}</button>
 
     </div>
 </div>
