--- a/src/app/web-layout/buy/buy.component.html
+++ b/src/app/web-layout/buy/buy.component.html
@@ -121,12 +121,12 @@
           </div>
         </div>
         <div class="flex items-center gap-2 justify-center w-2/12">
-          <button (click)="item.quantity > 1 ? item.quantity = item.quantity - 1 : ''"
+          <button type="button" (click)="item.quantity > 1 ? item.quantity = item.quantity - 1 : ''"
             class="w-[30px] h-[30px] border border-gray-300 rounded-md text-gray-600 hover:border-red-400 hover:text-red-600 hover:bg-red-50 transition duration-200">
             -
           </button>
           <span class="w-6 text-center font-medium text-gray-500">{{ item.quantity }}</span>
-          <button (click)="item.quantity < item.available ? item.quantity = item.quantity + 1 : ''"
+          <button type="button" (click)="item.quantity < item.available ? item.quantity = item.quantity + 1 : ''"
             class="w-[30px] h-[30px] border border-gray-300 rounded-md text-gray-600 hover:border-green-400 hover:text-green-600 hover:bg-green-50 transition duration-200">
             +
           </button>
