--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,6 +2,7 @@
   <img [routerLink]="['/']" src="mw-logo.png" alt="Logo" class="h-[50px] rounded-md cursor-pointer" />
   <div class="flex gap-x-5 items-center">
     <p [routerLink]="['/']" class="cursor-pointer font-medium">Home</p>
+    <p [routerLink]="['/dashboard/profile']" class="cursor-pointer font-medium">Profile</p>
     <div [routerLink]="['cart']" style="position: relative;" class="cursor-pointer">
       <svg version="1.1" viewBox="0 0 26 26" width="40" height="40" xml:space="preserve"
         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
